# ring

./: CMakeLists.txt  README.md
include/: ring.hpp
src/: main.cpp
src/tests/: concepts_assert.cpp  operations_test.cpp
